--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start:server": "node src/server.js",
-    "start": "node src/index.js",
-    "ppt": "node src/ppt.js"
+    "start:dev": "node --watch src/server.js",
+    "start": "node src/index.js"
   },
   "type": "module",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.6",
     "axios-cookiejar-support": "^4.0.6",
+    "bullmq": "^3.12.0",
     "fastify": "^4.15.0",
     "number-to-words": "^1.2.4",
-    "puppeteer": "^19.11.0",
     "tesseract.js": "^4.0.3",
     "tough-cookie": "^4.1.2"
   }
