--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rubinot",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
     "start:dev": "node --watch src/server.js",
-    "start": "node src/index.js"
+    "start": "node src/server.js"
   },
   "type": "module",
   "license": "ISC",
