--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,7 @@ services:
     networks:
       - app-network
   webserver:
-    # image: nginx:mainline-alpine
-    build:
-      context: ./nginx
+    build: ./nginx
     container_name: webserver
     restart: unless-stopped
     ports:
@@ -35,7 +33,7 @@ services:
       - "443:443"
     volumes:
       - web-root:/var/www/html
-      - ./nginx-conf:/etc/nginx/conf.d
+      # - ./nginx-conf:/etc/nginx/conf.d
       # - certbot-etc:/etc/letsencrypt
       # - certbot-var:/var/lib/letsencrypt
       # - dhparam:/etc/ssl/certs
@@ -58,12 +56,12 @@ volumes:
     driver: local
   # certbot-etc:
   # certbot-var:
-  web-root:
-    driver: local
-    # driver_opts:
-    # type: none
-    # device: /Users/matheus/workspace/rubinot/views/
-    # o: bind
+  # web-root:
+  #   driver: local
+  # driver_opts:
+  # type: none
+  # device: /Users/matheus/workspace/rubinot/views/
+  # o: bind
   # dhparam:
   #   driver: local
   #   driver_opts:
