configuration of nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,4 +9,12 @@ server {
   location / {
     proxy_pass http://loadbalancer;
   }
+
+  location ^~ /create_account {
+    proxy_pass http://loadbalancer;
+  }
+
+  location ^~ /get_account {
+    proxy_pass http://loadbalancer;
+  }
 }
