configuration of nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,16 +5,21 @@ upstream loadbalancer {
 
 server {
   listen 80;
+
   server_name localhost;
+
   location / {
+    resolver 8.8.8.8;
     proxy_pass http://loadbalancer;
   }
 
   location ^~ /create_account {
+    resolver 8.8.8.8;
     proxy_pass http://loadbalancer;
   }
 
   location ^~ /get_account {
+    resolver 8.8.8.8;
     proxy_pass http://loadbalancer;
   }
 }
