--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,17 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
-  web1:
+  rubinot:
     restart: on-failure
     build: .
     ports:
       - "81:5000"
-  web2:
-    restart: on-failure
-    build: .
-    ports:
-      - "82:5000"
   nginx:
     build: ./nginx
     ports:
       - "80:80"
     depends_on:
-      - web1
-      - web2
+      - rubinot
 # version: "3.9"
 # services:
 #   cache:
