--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,13 @@ upstream loadbalancer {
 
 server {
   listen 80;
+  listen 443 ssl;
 
   server_name localhost;
+
+  if ($scheme = http) {
+    return 301 https://$server_name$request_uri;
+  }
 
   location / {
     resolver 8.8.8.8;
