--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,28 @@ upstream loadbalancer {
 }
 
 server {
-  listen 80;
-  listen 443;
+    listen 80;
+    server_name m1theus.dev;
 
-  server_name localhost;
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
 
+    location / {
+        return 301 https://$host$request_uri;
+    }    
+    
+}
+
+server {
+    listen 443 ssl;
+    server_name m1theus.dev;
+  
+  ssl_certificate /etc/letsencrypt/live/m1theus.dev/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/m1theus.dev/privkey.pem;
+  include /etc/letsencrypt/options-ssl-nginx.conf;
+  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    
   location / {
     resolver 8.8.8.8;
     proxy_pass http://loadbalancer;
