--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fastify": "^4.15.0",
     "ioredis": "^5.3.2",
     "number-to-words": "^1.2.4",
+    "sharp": "^0.32.1",
     "tesseract.js": "^4.0.3",
     "tough-cookie": "^4.1.2"
   }
