--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,28 +2,28 @@ upstream loadbalancer {
   server rubinot:5000;
 }
 
+# server {
+#     listen 80;
+#     server_name m1theus.dev;
+
+#     location /.well-known/acme-challenge/ {
+#       root /var/www/certbot;
+#     }
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }    
+    
+# }
+
 server {
     listen 80;
-    server_name m1theus.dev;
-
-    location /.well-known/acme-challenge/ {
-      root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }    
-    
-}
-
-server {
-    listen 443 ssl;
-    server_name m1theus.dev;
+    server_name localhost;
   
-  ssl_certificate /etc/letsencrypt/live/m1theus.dev/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/m1theus.dev/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+  # ssl_certificate /etc/letsencrypt/live/m1theus.dev/fullchain.pem;
+  # ssl_certificate_key /etc/letsencrypt/live/m1theus.dev/privkey.pem;
+  # include /etc/letsencrypt/options-ssl-nginx.conf;
+  # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
   location / {
     resolver 8.8.8.8;
