--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - "443:443"
     depends_on:
       - rubinot
-    volumes:
-      # - ./data/certbot/conf:/etc/letsencrypt
-    # - ./data/certbot/www:/var/www/certbot
+  #  volumes:
+  # - ./data/certbot/conf:/etc/letsencrypt
+  # - ./data/certbot/www:/var/www/certbot
   # certbot:
   #   image: certbot/certbot
   #   volumes:
