--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "dependencies": {
     "axios": "^1.3.6",
     "axios-cookiejar-support": "^4.0.6",
-    "bullmq": "^3.12.0",
     "express": "^4.18.2",
-    "fastify": "^4.15.0",
-    "ioredis": "^5.3.2",
-    "number-to-words": "^1.2.4",
+    "p-retry": "^5.1.2",
     "sharp": "^0.32.1",
     "tesseract.js": "^4.0.3",
     "tough-cookie": "^4.1.2"
