refactoring generate character name and nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,7 +18,7 @@ upstream loadbalancer {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name m1theus.dev;
   
   # ssl_certificate /etc/letsencrypt/live/m1theus.dev/fullchain.pem;
   # ssl_certificate_key /etc/letsencrypt/live/m1theus.dev/privkey.pem;
